src/ContosoTraders.Api.Products/Manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-traders-products
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - footestlabel.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: footestlabel.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: contoso-traders-products
                port:
                  number: 80
